--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>hola mundo</h1>
-    <script src="/objetos/app.js"></script>
+    <script src="main.js"></script>
 </body>
 </html>
